--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         }
     }
     defaultConfig {
-        applicationId "com.xing.floatbar"
+        applicationId "com.kkwinter.floatbar"
         minSdkVersion 23
         targetSdkVersion 27
         versionCode 3
