--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.xing.floatbar">
+    package="com.kkwinter.floatbar">
 
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
@@ -30,14 +30,14 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
-        android:name="com.xing.floatbar.App"
+        android:name="com.kkwinter.floatbar.App"
         android:allowBackup="true"
         android:icon="@drawable/gr"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning,HardcodedDebugMode">
         <activity
-            android:name="com.xing.floatbar.MainActivity"
+            android:name="com.kkwinter.floatbar.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
@@ -47,7 +47,7 @@
         </activity>
 
         <receiver
-            android:name="com.xing.floatbar.PowerAdminReceiver"
+            android:name="com.kkwinter.floatbar.PowerAdminReceiver"
             android:description="@string/app_name"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_DEVICE_ADMIN">
@@ -61,7 +61,7 @@
         </receiver>
 
         <activity
-            android:name="com.xing.floatbar.ScreenShotActivity"
+            android:name="com.kkwinter.floatbar.ScreenShotActivity"
             android:excludeFromRecents="true"
             android:theme="@style/Theme.Translucent.notAnimation">
             <intent-filter>
@@ -73,7 +73,7 @@
 
 
         <activity
-            android:name="com.xing.floatbar.PermissionActivity"
+            android:name="com.kkwinter.floatbar.PermissionActivity"
             android:excludeFromRecents="true"
             android:theme="@style/Theme.Translucent.notAnimation">
             <intent-filter>
@@ -84,7 +84,7 @@
         </activity>
 
         <activity
-            android:name="com.xing.floatbar.PowerActivity"
+            android:name="com.kkwinter.floatbar.PowerActivity"
             android:excludeFromRecents="true"
             android:theme="@style/Theme.Translucent.notAnimation">
             <intent-filter>
@@ -96,7 +96,7 @@
 
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.xing.floatbar.easytouch.fileprovider"
+            android:authorities="com.kkwinter.floatbar.easytouch.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
@@ -105,7 +105,7 @@
         </provider>
 
         <activity
-            android:name="com.xing.floatbar.SettingActivity"
+            android:name="com.kkwinter.floatbar.SettingActivity"
             android:theme="@android:style/Theme.Light.NoTitleBar">
             <intent-filter>
                 <action android:name="com.setting" />
@@ -114,7 +114,7 @@
         </activity>
 
         <receiver
-            android:name="com.xing.floatbar.AutoStartBroadcastReceiver"
+            android:name="com.kkwinter.floatbar.AutoStartBroadcastReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
@@ -125,7 +125,7 @@
             </intent-filter>
         </receiver>
         <activity
-            android:name="com.xing.floatbar.AboutUsActivity"
+            android:name="com.kkwinter.floatbar.AboutUsActivity"
             android:theme="@android:style/Theme.Light.NoTitleBar">
             <intent-filter>
                 <action android:name="com.aboutus" />
@@ -135,7 +135,7 @@
 
 
         <service
-            android:name="com.xing.floatbar.ABCService"
+            android:name="com.kkwinter.floatbar.ABCService"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
