--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,21 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.kkwinter.floatbar">
 
-    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
+
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
+
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-feature android:name="android.hardware.camera" android:required="true" />
     <uses-feature android:name="android.hardware.autofocus" />
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission
-        android:name="android.permission.WRITE_SECURE_SETTINGS"
+
+
+    <uses-permission android:name="android.permission.WRITE_SETTINGS"
         tools:ignore="ProtectedPermissions" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -36,9 +39,9 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning,HardcodedDebugMode">
+
         <activity
-            android:name="com.kkwinter.floatbar.MainActivity"
-            android:label="@string/app_name"
+            android:name="com.kkwinter.floatbar.activity.MainActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,7 +50,7 @@
         </activity>
 
         <receiver
-            android:name="com.kkwinter.floatbar.PowerAdminReceiver"
+            android:name="com.kkwinter.floatbar.receiver.PowerAdminReceiver"
             android:description="@string/app_name"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_DEVICE_ADMIN">
@@ -105,7 +108,7 @@
         </provider>
 
         <activity
-            android:name="com.kkwinter.floatbar.SettingActivity"
+            android:name="com.kkwinter.floatbar.activity.SettingActivity"
             android:theme="@android:style/Theme.Light.NoTitleBar">
             <intent-filter>
                 <action android:name="com.setting" />
@@ -113,19 +116,8 @@
             </intent-filter>
         </activity>
 
-        <receiver
-            android:name="com.kkwinter.floatbar.AutoStartBroadcastReceiver"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-                <category android:name="android.intent.category.HOME" />
-            </intent-filter>
-        </receiver>
         <activity
-            android:name="com.kkwinter.floatbar.AboutUsActivity"
+            android:name="com.kkwinter.floatbar.activity.AboutUsActivity"
             android:theme="@android:style/Theme.Light.NoTitleBar">
             <intent-filter>
                 <action android:name="com.aboutus" />
@@ -145,18 +137,6 @@
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_config" />
         </service>
-
-
-        <!-- Necessary -->
-        <activity android:name="com.zcoup.base.view.InnerWebViewActivity" />
-
-        <!--Optional-->
-        <receiver android:name="com.zcoup.base.receiver.UtilityReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.PACKAGE_ADDED" />
-                <data android:scheme="package" />
-            </intent-filter>
-        </receiver>
 
     </application>
 
